# pyproject.toml
[project]
name = "langgraph-junit-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-huggingface>=0.1.0",
  "langgraph>=0.2.0",
  "transformers>=4.40.0",
  "torch>=2.1.0",
  "accelerate>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]
